@@ -110,6 +110,7 @@ Thank you to core contributor (LB (Ben) Johnston) for writing this documentation
  * Fix log message to record the correct restriction type when removing a page view restriction (Rohit Sharma, Hazh. M. Adam)
  * Avoid potential race condition with new Page subscriptions on the edit view (Alex Tomkins)
  * Use the correct action log when creating a redirect (Thibaud Colas)
+ * Ensure that all password fields consistently allow leading & trailing whitespace (Neeraj P Yetheendran)
 
 ### Documentation
 
