@@ -154,6 +154,29 @@ class TestLoginView(WagtailTestUtils, TestCase):
         self.assertFalse(self.client.session.get_expire_at_browser_close())
         self.assertEqual(self.client.session.get_expiry_age(), 7)
 
+    def test_password_whitespace_not_stripped(self):
+        user_model = get_user_model()
+        # Create a user
+        user_data = {
+            user_model.USERNAME_FIELD: "test2@email.com",
+            "email": "test2@email.com",
+            "password": "  whitespaced_password  ",
+        }
+        for field in user_model.REQUIRED_FIELDS:
+            if field not in user_data:
+                user_data[field] = field
+
+        user_model.objects.create_superuser(**user_data)
+
+        response = self.client.post(
+            reverse("wagtailadmin_login"),
+            {
+                "username": "test2@email.com",
+                "password": "  whitespaced_password  ",
+            },
+        )
+        self.assertRedirects(response, reverse("wagtailadmin_home"))
+
 
 class TestPasswordResetView(TestCase):
     def test_password_reset_view_uses_correct_form(self):
